2007-02-09  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current snapshot of the database.

2007-02-06  Martin Mares  <mj@ucw.cz>

	* Replaced bzero() by memset() everywhere, it's better to lose a tiny
	bit of readability than maintain hacks to make it work on various systems.

	* lib/configure: tr on Solaris is a bit weird and it requires `[A-Z]'
	instead of `A-Z'. Fortunately, the extra brackets don't hurt otherwise.

	* lib/types.h, lib/configure: Solaris should use <stdint.h> to get precise
	integer types.

2007-02-04  Martin Mares  <mj@ucw.cz>

	* lspci.c: alloca() needs <alloca.h>.

2006-09-17  Martin Mares  <mj@ucw.cz>

	* lib/dump.c: Fixed a couple of bugs in the dump backend which caused
	devices with domains or with extended config space to be read incorrectly.
	Also, dumps with partial lines are allowed now.

2006-09-10  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current database snapshot.

	* lspci.c (scan_device): If an error occurs when reading the standard config
	header of a device, report it and ignore the device and return with exit
	code 2 at the end.

2006-09-09  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.4.

	* maint/release: Remind the maintainer about the current PCI_LIB_VERSION.

	* lib/pci.h: Updated PCI_LIB_VERSION.

	* lspci.c (show_machine): In the `-m' mode, do proper shell escaping
	if the fields printed contain quotes or backslashes.

	* lspci.c (show_machine): Added a `-vmm' mode, which removes the misuse
	of the `Device' tag for two different purposes.

	* Makefile: Moved all system-dependent decisions to lib/configure,
	since config.mk is included in the top-level Makefile anyway.

	* lib/configure: When configuring for Linux, ignore the kernel version
	and always build all access methods.

	* Makefile (CFLAGS): Removed -Winline, it's not needed and triggers
	at many non-interesting places with gcc 3.4.

	* Whitespace cleanup of all source files.
