@@ -1,3 +1,7 @@
+2007-02-13  Martin Mares  <mj@ucw.cz>
+
+	* Very experimental resolving of PCI ID's using DNS.
+
 2007-02-09  Martin Mares  <mj@ucw.cz>
 
 	* pci.ids: Updated to the current snapshot of the database.
